# rencrypt-python

./: .gitignore  .gitmodules  .gitpod.yml  CONTRIBUTING.md  Cargo.toml  README.md  bench.py  benchmark.py  main.py  pyproject.toml  rencrypt.pyi  requirements.txt  test.bat  test.sh  tests-run.bat  tests.bat  tests.sh
.env/: .gitignore  pyvenv.cfg
.github/workflows/: CI.yml  PyPI.yml  PyPy.yml  tests.yml
benches/: bench.py  parallel_copy.rs
examples/: encrypt.py  encrypt_buf.py  encrypt_file.py  encrypt_from.py  encrypt_into.py  encrypt_into_buf.py  encrypt_to_buf.py
src/: cipher.rs  crypto.rs  encryptor.rs  lib.rs  secrets.rs
src/cipher/: orion.rs  ring.rs  rust_crypto.rs  sodiumoxide.rs
tests/: test_rencrypt.py
