[package]
name = "rencrypt"
version = "0.3.27"
edition = "2021"

[lib]
name = "rencrypt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.21.2", features = ["extension-module"] }
ring = "^0.17.8"
rand = "^0.8.5"
rand_core = "^0.6.4"
rand_chacha = "^0.3.1"
#aead = "^0.5.2"
#aes-gcm = "^0.10"
rayon = "^1.10.0"
zeroize = "^1.8.1"
criterion = "^0.5.1"
blake3 = "^1.5.1"
hex = "^0.4.3"
numpy = "^0.21"
libc = "^0.2.155"
secrets = { version = "^1.2.0", features = ["use-libsodium-sys"] }

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }

[[bench]]
name = "parallel_copy"
harness = false
