# cargo-features = ["profile-rustflags"]

[package]
name = "rencrypt"
description = "A Python encryption library implemented in Rust. It supports AEAD with varius ciphers. It uses ring, RustCrypto (and derivates), sodiumoxide and orion to handle encryption. \n If offers slightly higher speed compared to other Python libs, especially for small chunks of data (especially the Ring provider with AES-GCM ciphers). The API also tries to be easy to use but it's more optimized for speed than usability."
version = "1.2.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
authors = ["Radu Marias <radumarias@gmail.com>"]
homepage = "https://radumarias.github.io/rencrypt-python"
repository = "https://github.com/radumarias/rencrypt-python"
readme = "README.md"
keywords = ["crypto", "cryptography", "encryption", "aead", "gcm"]
categories = ["cryptography"]
documentation = "https://github.com/radumarias/rencrypt-python"
exclude = [".github/"]

[lib]
name = "rencrypt"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.21.2", features = ["extension-module"] }
ring = "^0.17.8"
rand = "^0.8.5"
rand_core = "^0.6.4"
rand_chacha = "^0.3.1"
aead = "0.5.2"
aes-gcm = "0.10.3"
chacha20poly1305 = "0.10.1"
aes-gcm-siv = "0.11.1"
aes-siv = "0.7.0"
ascon-aead = "0.4.2"
deoxys = "0.1.0"
eax = "0.5.0"
sodiumoxide = "0.2.7"
orion = "0.17.6"
rayon = "^1.10.0"
zeroize = "^1.8.1"
criterion = "^0.5.1"
blake3 = "^1.5.1"
hex = "^0.4.3"
numpy = "^0.21"
libc = "^0.2.155"
secrets = { version = "^1.2.0", features = ["use-libsodium-sys"] }
strum = "0.26.2"
strum_macros = "0.26.2"
serde = { version = "1.0.203", features = ["derive"] }
aes = "0.8.4"

[dev-dependencies]
criterion = { version = "^0.5.1", features = ["html_reports"] }

[profile.release]
panic = "abort"
# Treat warnings as errors in release builds
# rustflags = ["-Dwarnings"]
lto = true

[[bench]]
name = "parallel_copy"
harness = false

[lints.clippy]
too_many_arguments = "allow"
module_name_repetitions = "allow"
